Fix broken style on Safari

--- a/src/main/resources/css/atoms/_snippet.scss
+++ b/src/main/resources/css/atoms/_snippet.scss
@@ -12,6 +12,9 @@
 
 .atom--snippet {
     @include multiline(4, $neutral-4);
+    border-left: 0;
+    border-right: 0;
+    border-bottom: 0;
     background: $neutral-7;
     position: relative;
     padding: 0 ($gutter / 4) ($baseline / 2);
